--- a/css/style.css
+++ b/css/style.css
@@ -246,7 +246,7 @@ body {
   position: relative;
 }
 #outer.top-bg {
-  background-image: url('/img/top-bg.jpg');
+  background-image: url("/img/top-bg.jpg");
   background-position: top center;
   background-repeat: no-repeat;
   background-size: auto;
@@ -650,7 +650,12 @@ footer .copyright {
 }
 #home-container .inner #scroll-line {
   width: 1px;
-  background: linear-gradient(0deg, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 0) 40%, #ffffff 50%);
+  background: linear-gradient(
+    0deg,
+    rgba(255, 255, 255, 0) 0%,
+    rgba(255, 255, 255, 0) 40%,
+    #ffffff 50%
+  );
   background-color: #333333;
   background-position: center center;
   background-attachment: fixed;
@@ -812,7 +817,13 @@ footer .copyright {
 #home-container .inner #case-list li a.case-img[data-case-locked="true"] {
   cursor: pointer;
 }
-#home-container .inner #case-list li a.case-img[data-case-locked="true"] .img-wrap .password-required {
+#home-container
+  .inner
+  #case-list
+  li
+  a.case-img[data-case-locked="true"]
+  .img-wrap
+  .password-required {
   position: absolute;
   width: 100%;
   padding: 100% 0;
@@ -822,11 +833,24 @@ footer .copyright {
   transform: translateY(-50%);
   top: 50%;
 }
-#home-container .inner #case-list li a.case-img[data-case-locked="true"] .img-wrap .password-required:hover {
+#home-container
+  .inner
+  #case-list
+  li
+  a.case-img[data-case-locked="true"]
+  .img-wrap
+  .password-required:hover {
   transition: all 0.5s ease-in-out;
   background: rgba(20, 20, 20, 0.8);
 }
-#home-container .inner #case-list li a.case-img[data-case-locked="true"] .img-wrap .password-required img {
+#home-container
+  .inner
+  #case-list
+  li
+  a.case-img[data-case-locked="true"]
+  .img-wrap
+  .password-required
+  img {
   display: block;
   width: 20%;
   margin: 0 auto 0.5rem;
@@ -872,7 +896,7 @@ footer .copyright {
   line-height: 1;
 }
 #case-container .case-text ul.special span {
-  vertical-align: middle;
+  vertical-align: top;
 }
 #case-container .case-text ul li {
   padding: 0.125rem 0;
@@ -1113,7 +1137,7 @@ button.close-overlay img {
 video {
   /* override other styles to make responsive
 	width: 100%    !important;*/
-  height: auto   !important;
+  height: auto !important;
 }
 video.center-vid {
   width: 100% !important;
